--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,36 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+/* global.css */
+/*button:focus-visible {*/
+/*  outline: 4px dashed #ff1493 !important;*/
+/*  outline-offset: 2px !important;*/
+/*  animation: outlineGrow 0.1s ease-out forwards !important;*/
+/*}*/
+/*a:focus-visible {*/
+/*  outline: 4px dashed #ff1493 !important;*/
+/*  outline-offset: 2px !important;*/
+/*}*/
+
+.btn:focus-visible {
+  outline: 4px dashed #ff1493 !important;
+  outline-offset: 2px !important;
+}
+input:focus {
+  outline: none;
+}
+
+/* 僅在鍵盤操作焦點時顯示輪廓 */
+input:focus-visible {
+  outline: 4px dashed #ff1493 !important;
+  outline-offset: 2px !important;
+}
+
+
+.custom-select:focus-visible {
+  outline: 4px dashed #ff1493 !important;
+  outline-offset: 2px !important
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -19,3 +49,4 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
